# WatermelonDB

./: .gitignore  Collection接口文档.md  C部分接口开发文档.docx  C部分接口说明.xlsx  README.md  package-lock.json  package.json
examples/: App.tsx  client-origin.tsx  index.js  metro.config.js  package.json
examples/android/: build.gradle  settings.gradle
examples/android/app/: build.gradle
examples/harmony/: .gitignore  build-profile.json5  build-profile.template.json5  log.txt  oh-package.json5
examples/harmony/AppScope/: app.json5
examples/harmony/entry/: build-profile.json5  oh-package.json5
examples/harmony/hvigor/: hvigor-config.json5
examples/src/: MainPage.js
examples/src/WaterDatabase/: index.js
examples/src/WaterLocalStorage/: index.js
examples/src/WatermelonDB/: AppSchema.ts  constants.ts  demo.ts  index.jsx  model.ts  ts-example.ts
examples/src/WatermelonDB2/: index.js
examples/src/WatermelonDBAndroid/: index.js
examples/src/WatermelonDBCollectionMap/: index.js
examples/src/WatermelonDBComplex/: index.js  mockdata.js
examples/src/WatermelonDBQueryTest/: FetchTestScreen.js  MarkAllAsDeletedTest.js  ObserveMethodTest.js  database.js  index.js  model.js  schema.js
examples/src/WatermelonDBSimple/: index.js
examples/src/WatermelonDBSimplejsiTure/: index.js
harmony/watermelondb/src/main/cpp/: CMakeLists.txt  RNWMDatabaseJSIBridge.cpp  RNWMDatabaseJSIBridge.h  WatermelondbPackage.h
scripts/: make.mjs
src/Database/: WorkQueue.js  index.js
src/adapters/: common.js
src/react/: DatabaseProvider.js
src/specs/: NativeWMDatabaseJSIBridge.ts
(+37 files in other folders)
